# sankshepa

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  rfc3164.rs  rfc5424.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  logshrink.rs
crates/ui/: Cargo.toml
crates/ui/src/: index.html  lib.rs
docs/: storage.md
src/: main.rs
src/ingestion/: mod.rs
src/protocol/: mod.rs  rfc3164.rs  rfc5424.rs
src/storage/: logshrink.rs  mod.rs
tests/: integration_test.rs
