[package]
name = "sankshepa"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
nom = "7.1.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.7", features = ["derive"] }
zstd = "0.13.1"
anyhow = "1.0.86"
bincode = "1.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
byteorder = "1.5.0"
bitvec = "1.0.1"
# For LCS-based template discovery
strsim = "0.11.1"

[dev-dependencies]
nix = { version = "0.29.0", features = ["signal"] }
