[workspace]
members = [
    ".",
    "crates/protocol",
    "crates/storage",
    "crates/ingestion",
    "crates/ui",
    "crates/cluster",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
nom = "7.1.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.7", features = ["derive"] }
zstd = "0.13.1"
anyhow = "1.0.86"
postcard = { version = "1.0.8", features = ["alloc"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
byteorder = "1.5.0"
bitvec = "1.0.1"
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3.30"
strsim = "0.11.1"

sankshepa-protocol = { path = "crates/protocol" }
sankshepa-storage = { path = "crates/storage" }
sankshepa-ingestion = { path = "crates/ingestion" }
sankshepa-ui = { path = "crates/ui" }

[package]
name = "sankshepa"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
chrono.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

sankshepa-protocol.workspace = true
sankshepa-storage.workspace = true
sankshepa-cluster = { path = "crates/cluster" }
sankshepa-ingestion.workspace = true
sankshepa-ui.workspace = true

[dev-dependencies]
nix = { version = "0.30.1", features = ["signal"] }
