[package]
name = "sankshepa-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
sankshepa-protocol.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
